--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,19 +6,6 @@ body{ // disable scroll
     margin: 0px;
 }
 
-.scrollableContent {
-    overflow:auto;
-    height: calc(100vh - 120px); // 60px for header and 70px for graphtoolbar
-
-    .background {
-        height: inherit;
-        width: 100%;
-        position: fixed;
-        background-color: #9dbcd5;
-        z-index: -1;
-    }
-}
-
 svg#clouds {
     position: fixed;
     bottom: -160px;
